# Moku

./: .gitignore  LICENSE  PKGBUILD  README.md  Todo  dev.moku.app.yml  flake.nix  index.html  io.github.Youwes09.Moku.yml  io.github.moku_project.Moku.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
nix/: frontend.nix  moku.nix  scripts.nix  server.nix
packaging/: cargo-sources.json  dev.moku.app.metainfo.xml  io.github.Youwes09.Moku.desktop  io.github.Youwes09.Moku.metainfo.xml  io.github.moku_project.Moku.desktop  io.github.moku_project.Moku.metainfo.xml
src/: App.svelte  main.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: suwayomi-launcher-linux.sh  suwayomi-launcher.sh
src-tauri/capabilities/: default.json  http-scope.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  biometric.rs  mod.rs  server.rs  storage.rs  system.rs  updater.rs
src-tauri/src/server/: conf.rs  mod.rs  resolve.rs
src/api/: client.ts  index.ts
src/api/mutations/: chapters.ts  downloads.ts  extensions.ts  index.ts  manga.ts  mutations.md  tracking.ts
src/api/queries/: chapters.ts  downloads.ts  extensions.ts  index.ts  manga.ts  meta.ts  queries.md  tracking.ts  updater.ts
src/components/chrome/: Layout.svelte  RecentActivity.svelte  Sidebar.svelte  SplashScreen.svelte  TitleBar.svelte  Toaster.svelte
src/components/downloads/: Downloads.svelte
src/components/history/: History.svelte
src/components/layout/: Layout.svelte  RecentActivity.svelte  Sidebar.svelte  SplashScreen.svelte  TitleBar.svelte  Toaster.svelte
src/components/pages/: Discover.svelte  Downloads.svelte  Explore.svelte  Extensions.svelte  GenreDrillPage.svelte  History.svelte  Home.svelte  Library.module.css  Library.svelte  Library.tsx  MigrateModal.svelte  Reader.tsx  Search.svelte  SeriesDetail.svelte  SeriesDetail.tsx  Tracking.svelte
src/components/reader/: Reader.svelte
src/components/search/: Search.svelte
src/components/series/: AutomationPanel.svelte  MarkersPanel.svelte  MigrateModal.svelte  SeriesDetail.svelte  TrackingPanel.svelte
src/components/settings/: Settings.svelte  Settings.tsx  ThemeEditor.svelte
src/components/shared/: AutomationPanel.svelte  ContextMenu.svelte  MangaPreview.svelte  SourceBrowse.svelte  SourceList.svelte  ThreeDCard.svelte  Thumbnail.svelte  TrackingPanel.svelte
src/components/sources/: SourceBrowse.svelte  SourceList.svelte
src/core/: auth.ts  backup.ts  theme.ts  updater.ts  util.ts
src/core/actions/: index.ts  selectPortal.ts
src/core/algorithms/: filter.ts  index.ts  paginate.ts  queue.ts  (+2 more)
src/lib/: auth.ts  cache.ts  chapterList.ts  client.ts  discord.ts  imageCache.ts  keybinds.ts  queries.ts  types.ts  util.ts
src/store/: app.svelte.ts  boot.svelte.ts  discord.ts  index.ts  notifications.svelte.ts  state.svelte.ts
src/styles/: global.css
src/types/: api.ts  chapter.ts  extension.ts  history.ts  index.ts  manga.ts  settings.ts  tracking.ts
(+148 files in other folders)
