[package]
name = "moku"
version = "0.8.0"
edition = "2021"

[lib]
name = "moku_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "moku"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri                     = { version = "2.0", features = [] }
tauri-plugin-shell        = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
tauri-plugin-http         = "2"
tauri-plugin-os           = "2.3.2"
tauri-plugin-discord-rpc  = { git = "https://github.com/Youwes09/tauri-plugin-discord-rpc" }
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
walkdir                   = "2"
sysinfo                   = "0.32"
dirs                      = "5"
urlencoding               = "2"
tokio                     = { version = "1", features = ["rt-multi-thread"] }
reqwest                   = { version = "0.12", features = ["blocking"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
